Contrast fixes

--- a/src/app/TextStyles.module.scss
+++ b/src/app/TextStyles.module.scss
@@ -1,5 +1,7 @@
 .grey {
   color: #ffffff77;
+  // alternate high-contrast shade
+  color: #929292bd;
 }
 .white {
   color: #ffffff;
